# libmodplug-gyp

./: BUILD.gn  libmodplug.gyp  wscript
include/all/: it_defs.h  modplug.h  sndfile.h  stdafx.h
include/all/libmodplug/: it_defs.h  modplug.h  stdafx.h
include/libmodplug/: it_defs.h  modplug.h  stdafx.h
libmodplug-0.8.8.5/src/: load_abc.cpp
src/win/: config.h
